<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_weekdays"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_toRightOf="@id/rl_background"
                android:paddingLeft="@dimen/_5sdp">

                <TextView
                    android:id="@+id/presentdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TA Claim Form"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_16sdp" />
            </RelativeLayout>


        </RelativeLayout>

    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/rl_ctllogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_10sdp"
                android:gravity="center">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/ctllogo"
                    android:orientation="vertical" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextNameOfEmployee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/Name_Of_Employee"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextDateOfTravelling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/DateOfTravelling"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextE_Code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/E_Code"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextProjectLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/Project_Location"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>


            <RelativeLayout
                android:id="@+id/rl_Client_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:focusableInTouchMode="true">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_Client_Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_Project_Type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:focusableInTouchMode="true">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_Project_Type"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editproject_purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="Project purpose"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextSite_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/Site_Details"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextTA_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/TA_Details"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextTotal_Amounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/Total_Amount"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextBank_AC_Details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/Bank_AC_Details"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextSubmitted_By"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/Submitted_By"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:background="#F2F4F4"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/editTextContact_No"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/deepviolet"
                    android:hint="@string/Contact_No"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColorHint="@color/deepviolet" />
            </android.support.design.widget.TextInputLayout>
            //

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_17sdp"
                android:orientation="horizontal"
                android:weightSum="2">

                //select from gallery

                <RelativeLayout
                    android:id="@+id/rl_pickphoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/galleryimg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_19sdp"
                            android:background="@drawable/gallery" />
                    </RelativeLayout>

                    <RelativeLayout

                        android:id="@+id/gallerytxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_toRightOf="@+id/rl_image">

                        <TextView
                            android:id="@+id/pickaphoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Pick a photo"
                            android:textSize="@dimen/_14sdp" />
                    </RelativeLayout>

                </RelativeLayout>


                //

                <RelativeLayout
                    android:id="@+id/rl_takephoto"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/rl_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">


                        <ImageView
                            android:id="@+id/cameraimg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/_12sdp"
                            android:layout_marginTop="@dimen/_19sdp"
                            android:background="@drawable/camera" />
                    </RelativeLayout>

                    <RelativeLayout

                        android:id="@+id/cameratxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_8sdp"
                        android:layout_toRightOf="@+id/rl_img">

                        <TextView
                            android:id="@+id/takephoto"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Take a photo"
                            android:textSize="@dimen/_14sdp" />
                    </RelativeLayout>

                </RelativeLayout>
            </LinearLayout>

            //

            <LinearLayout
                android:id="@+id/rl_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:gravity="center">

                <Button
                    android:id="@+id/submitbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/sscustombtn"
                    android:text="@string/SUBMIT"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</RelativeLayout>
